<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Canaveral 2.0</string>
    <string name="app_version" translatable="false">V%s</string>
    <string name="title_dashboard">Play</string>
    <string name="title_stats">Stats</string>
    <string name="title_settings">Settings</string>
    <string name="title_game">Game</string>
    <string name="title_round_score">Round Score</string>
    <string name="image_description">image</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="validate">Validate</string>
    <string name="player">Player</string>
    <string name="player_number">Player %d</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="common_internet_error">Network error</string>
    <string name="welcome_title">Welcome on your Home Darts Club !</string>
    <string name="welcome_content">This app will offer you a global darts experience.\n\nFor
        the moment you will be able to play offline, using manual scoring. But some more
        exciting features will come soon.</string>
    <string name="welcome_login">Connexion | Inscription</string>
    <string name="welcome_guest">Play as guest</string>
    <string name="welcome_login_success">Your account is associated!</string>
    <string name="versus_type_single">Single player</string>
    <string name="versus_type_team">Team player</string>
    <string name="game_type_01_game" translatable="false">01 Game</string>
    <string name="game_type_cricket" translatable="false">Cricket</string>
    <string name="game_type_count_up" translatable="false">Count up</string>
    <string name="game_type_bull_hunter" translatable="false">Bull hunter</string>
    <string name="game_type_shangai" translatable="false">Shanghai</string>
    <string name="game_type_around_a_clock" translatable="false">Around a Clock</string>
    <string name="game_type_killer" translatable="false">Killer</string>
    <string name="game_variant_countup_standard" translatable="false">Standard</string>
    <string name="game_variant_countup_cricket" translatable="false">Cricket</string>
    <string name="game_variant_countup_bull" translatable="false">Bull</string>
    <string name="game_detail_inout_simple">Simple</string>
    <string name="game_detail_inout_double">Double</string>
    <string name="game_detail_inout_master">Master</string>
    <string name="dashboard_select_players">Select Players</string>
    <string name="dashboard_select_versus">Select Versus</string>
    <string name="dashboard_select_game">Select Game</string>
    <string name="dashboard_select_variant">Select Variant</string>
    <string name="dashboard_game_details">Game Details</string>
    <string name="dashboard_game_detail_in">In</string>
    <string name="dashboard_game_detail_out">Out</string>
    <string name="dashboard_game_detail_bull_value">Bull Value</string>
    <string name="dashboard_game_detail_rounds">Rounds</string>
    <string name="dashboard_game_detail_round_infinite">Infinite</string>
    <string name="dashboard_start">START</string>
    <string name="loading_game_tip_bot">Did you know ?\n You can assign a bot if you\’re alone !</string>
    <string name="loading_game_loading">Loading now…</string>
    <string name="game_bull" translatable="false">Bull</string>
    <string name="game_miss" translatable="false">Miss</string>
    <string name="game_back" translatable="false">Back</string>
    <string name="game_double" translatable="false">D</string>
    <string name="game_triple" translatable="false">T</string>
    <string name="player_remain_point" translatable="false">-</string>
    <string name="player_round" translatable="false">R %d/%d</string>
    <string name="player_round_unlimited" translatable="false">R %d</string>
    <string name="player_ppd" translatable="false">PPD: %.2f</string>
    <string name="player_mpr" translatable="false">MPR: %.2f</string>
    <string name="game_round_bust">BUST</string>
    <string name="game_options_title">Options</string>
    <string name="game_options_resume">Resume</string>
    <string name="game_options_quit">Quit the game</string>
    <string name="game_options_game_rules">Game Rules</string>
    <string name="game_end_replay">Replay</string>
    <string name="game_end_back_to_menu">Back to menu</string>
    <string name="game_end_draw">DRAW !</string>
    <string name="game_end_win_one">%s wins !</string>
    <string name="game_end_win_two">%s &amp; %s win !</string>
    <string name="game_end_win_three">%s, %s &amp; %s win !</string>
    <string name="game_end_checkout" translatable="false">Checkout</string>
    <string name="game_end_remaining">Remaining</string>
    <string name="game_end_score_reached">Reached score</string>
    <string name="game_end_score_total">Total score</string>
    <string name="game_end_ppd" translatable="false">PPD</string>
    <string name="game_end_ppd_value" translatable="false">%.2f</string>
    <string name="profile_title">Profile</string>
    <string name="my_profile_title">My profile</string>
    <string name="profile_nickname">alias %s</string>
    <string name="settings_title">General Settings</string>
    <string name="settings_languages">Languages</string>
    <string name="language_coming_soon">%s (coming soon)</string>
    <string name="language_de">Deutsch</string>
    <string name="language_en">English</string>
    <string name="language_es">Spanish</string>
    <string name="language_fr">French</string>
    <string name="language_it">Italian</string>
    <string name="language_ja">Japanese</string>
    <string name="language_ko">Korean</string>
    <string name="language_pt">Portuguese</string>
    <string name="language_ru">Russian</string>
    <string name="language_zh">Chinese</string>
    <string name="language_zhCN">Simplified Chinese</string>
    <string name="language_zhTW">Traditional Chinese</string>
    <string name="player_edition_title">Player Edition</string>
    <string name="player_edition_nickname">Pseudo</string>
    <string name="player_edition_reset" tools:ignore="MissingTranslation">Reset player</string>
    <string name="user_login">Log in</string>
    <string name="user_logout">Log out</string>
    <string name="user_hi">Hi,\n%s!</string>
    <string name="take_picture">Take photo</string>
    <string name="select_picture">Choose from Gallery</string>
    <string name="profile_associate_title">Associate my profile</string>
    <string name="stats_user_logout">Register your Decathlon account to get access to your stats.</string>
    <string name="stats_user_ppd" translatable="false">PPD :</string>
    <string name="stats_user_mpr" translatable="false">MPR :</string>
    <string name="stats_loading">Updating datas in progress…\n Please wait</string>
    <string name="stats_victories">Victories</string>
    <string name="stats_draws">Draws</string>
    <string name="stats_defeats">Defeats</string>
    <string name="stats_darts_thrown">darts\nthrown</string>
    <string name="stats_played_games">played\ngames</string>
    <string name="stats_last_update">Last update: %s</string>
    <string name="stats_game_title">Stats by Games</string>
    <string name="stats_game_played_games">Played Games</string>
    <string name="stats_game_ppd">PPD</string>
    <string name="stats_game_mpr">MPR</string>
    <string name="stats_game_highest_score">Highest Score</string>
    <string name="stats_game_winning_percentage">Win Rate</string>
    <string name="stats_tricks_title">Tricks &amp; Figures</string>
    <string name="stats_trick_baby_ton" translatable="false">Baby Ton</string>
    <string name="stats_trick_bag_o_nuts" translatable="false">Bag O\'Nuts</string>
    <string name="stats_trick_bulls_eye" translatable="false">Bullseye</string>
    <string name="stats_trick_bust" translatable="false">Bust</string>
    <string name="stats_trick_hattrick" translatable="false">Hattrick</string>
    <string name="stats_trick_high_ton" translatable="false">High Ton</string>
    <string name="stats_trick_low_ton" translatable="false">Low Ton</string>
    <string name="stats_trick_three_in_a_bed" translatable="false">3 In A Bed</string>
    <string name="stats_trick_ton" translatable="false">Ton</string>
    <string name="stats_trick_ton_80" translatable="false">Ton 80</string>
    <string name="stats_trick_white_horse" translatable="false">White Horse</string>
    <string name="stats_trick_round_score_60_and_more" translatable="false">60+</string>
    <string name="stats_trick_round_score_100_and_more" translatable="false">100+</string>
    <string name="stats_trick_round_score_140_and_more" translatable="false">140+</string>
    <string name="stats_trick_round_score_180" translatable="false">180</string>
    <string name="stats_trick_field_15" translatable="false">15</string>
    <string name="stats_trick_field_16" translatable="false">16</string>
    <string name="stats_trick_field_17" translatable="false">17</string>
    <string name="stats_trick_field_18" translatable="false">18</string>
    <string name="stats_trick_field_19" translatable="false">19</string>
    <string name="stats_trick_field_20" translatable="false">20</string>
    <string name="stats_trick_field_bull" translatable="false">Bull</string>
    <string name="stats_trick_avg_score_dart1">AVG Score\nDart 1</string>
    <string name="stats_trick_avg_score_dart2">AVG Score\nDart 2</string>
    <string name="stats_trick_avg_score_dart3">AVG Score\nDart 3</string>
    <string name="stats_trick_avg_score_round">AVG Score\nRound</string>
    <string name="stats_trick_checkout_rate">Checkout\nRate</string>
    <string name="stats_trick_highest_checkout">Highest\nCheckout</string>
    <string name="stats_trick_highest_score_round">High. Round</string>
    <string name="stats_trick_highest_8rounds">Highest\nScore 8R</string>
    <string name="stats_trick_highest_12rounds">Highest\nScore 12R</string>
    <string name="stats_trick_highest_16rounds">Highest\nScore 16R</string>
    <string name="stats_trick_avg_score_dart1_title">AVG Score Dart 1</string>
    <string name="stats_trick_avg_score_dart2_title">AVG Score Dart 2</string>
    <string name="stats_trick_avg_score_dart3_title">AVG Score Dart 3</string>
    <string name="stats_trick_avg_score_round_title">AVG Score Round</string>
    <string name="stats_trick_checkout_rate_title">Checkout Rate</string>
    <string name="stats_trick_highest_checkout_title">Highest Checkout</string>
    <string name="stats_trick_highest_score_round_title">High. Round</string>
    <string name="stats_trick_highest_8rounds_title">Highest Score 8R</string>
    <string name="stats_trick_highest_12rounds_title">Highest Score 12R</string>
    <string name="stats_trick_highest_16rounds_title">Highest Score 16R</string>
    <string name="stats_trick_baby_ton_info"><![CDATA[Number of <b>Baby Ton</b> performed. The <b>Baby Ton</b> trick corresponds to a score of 95 within a rounf, usually by scoring five 19s. ]]></string>
    <string name="stats_trick_bag_o_nuts_info"><![CDATA[Number of <b>Bag O\'Nuts</b> performed. The <b>Bag O\'Nuts</b> corresponds to a score of 45 with within a round.]]></string>
    <string name="stats_trick_bulls_eye_info"><![CDATA[Number of <b>Bullseye</b> hit. The <b>Bullseye</b> corresponds to the center of the board, linking tow areas: s25 and D25.]]></string>
    <string name="stats_trick_bust_info"><![CDATA[Number of <b>Bust</b>.  You player <b>Bust</b> when you hit more than needed in a x01 game.]]></string>
    <string name="stats_trick_hattrick_info"><![CDATA[Number of <b>Hat Trick</b> performed. The <b>Hat Trick</b> is when you hit three double bullseyes in a same round (150points).]]></string>
</resources>