<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="player"
            type="com.decathlon.canaveral.common.model.Player" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="109dp"
        android:layout_height="155dp"
        android:layout_margin="6dp"
        android:padding="@dimen/margin_medium"
        android:orientation="vertical"
        android:background="@drawable/background_player_game_stats">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Dkt.TextStyle.Player.Stats.Item.Title.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            android:text="@{player.nickname}"
            tools:text="Player X"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/player_image_round"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/player_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_default"
                app:showImage="@{player.image}"
                tools:src="@drawable/profile_default" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Dkt.TextStyle.Player.Stats.Item.Title.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/game_end_ppd"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player_stats_ppd"
            style="@style/Dkt.TextStyle.Player.Stats.Item.Value.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            tools:text="37.20"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player_stats_second_field_title"
            style="@style/Dkt.TextStyle.Player.Stats.Item.Title.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_end_checkout"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player_stats_second_field_value"
            style="@style/Dkt.TextStyle.Player.Stats.Item.Value.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            tools:text="51"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
