<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey_light">

        <com.decathlon.canaveral.common.view.KlavikaBITextView
            android:id="@+id/profile_title_layout"
            style="@style/Dkt.TextStyle.Settings.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/profile_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingTop="@dimen/margin_xlarge"
            android:paddingBottom="@dimen/margin_xlarge"
            android:paddingStart="@dimen/margin_xlarge"
            android:paddingEnd="@dimen/margin_xxlarge"
            app:layout_constraintTop_toBottomOf="@id/profile_title_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:src="@drawable/profile_default"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Dkt.TextStyle.Settings.Item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_languages"/>

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/Dkt.TextStyle.Settings.Value"
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_spinner_end"
                android:padding="@dimen/margin_large"
                android:rotation="270"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/language_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_item_layout"
            tools:listitem="@layout/list_textview_settings_item"
            tools:itemCount="3"/>

        <com.decathlon.canaveral.common.view.KlavikaBITextView
            android:id="@+id/settings_title_layout"
            style="@style/Dkt.TextStyle.Settings.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            app:layout_constraintTop_toBottomOf="@id/profile_item_layout"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/language_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingTop="28dp"
            android:paddingBottom="28dp"
            android:paddingStart="33dp"
            android:paddingEnd="35dp"
            app:layout_constraintTop_toBottomOf="@id/settings_title_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Dkt.TextStyle.Settings.Item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_languages"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Dkt.TextStyle.Settings.Value"
                android:id="@+id/settings_language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_spinner_end"
                android:drawablePadding="@dimen/margin_large"
                tools:text="English"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>